--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,10 @@ install_requires =
     sklearn
     mpi4py
     netCDF4
-
+    xarray
+    dask
+    bottleneck
+    
 [options.entry_points]
 console_scripts =
     generate=generate.__main__:main
